syntax = "proto3";

option csharp_namespace = "MarketplaceService.Protos";

package Marketplace;

service StorageService {
    rpc GetFileList(FileListRequest) returns(FileListResponse);
}

message FileListRequest {
    string bucket = 1;
}

message FileListResponse {
    repeated string filenames = 1;
}